[project]
name = "masked_prosody_model"
version = "0.1.0"
description = ""
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "rich>=13.6.0",
    "speech-collator>=0.1.18",
    "transformers>=4.34.0",
    "librosa>=0.9.2",
    "torchaudio>=2.1.0",
    "nnaudio>=0.3.2",
    "pandas>=2.0.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
