[project]
name = "masked_prosody_model"
version = "0.2.0"
description = ""
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "rich>=13.6.0",
    "transformers>=4.34.0",
    "librosa>=0.9.2",
    "nnaudio==0.3.1",
    "pandas>=2.0.3",
    "pyworld-prebuilt>=0.3.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=masked_prosody_model"
markers = [
    "torch_version(version): mark test to run with specific PyTorch version",
    "torch_2_0: mark test for PyTorch 2.0+",
    "torch_1_x: mark test for PyTorch 1.x",
]
